# recp

./: LICENSE  README.md  pyproject.toml  recp.py  regex_copy.py
