[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "recp"
author = "Felix G. Knorr"
author-email = "knorr.felix@gmx.de"
home-page = "https://github.com/KnorrFG/recp"
requires = ["pandas", "click", "tqdm"]
requires-python = ">=3.7"
description-file="README.md"
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.flit.scripts]
recp = "recp:main"
